Custom CSS loaded, expanded UI code, added scope controller, added SVG images, other minor changes

--- a/main.cfg
+++ b/main.cfg
@@ -1,1 +1,18 @@
-# Unused
+[Theme]
+# CSS file to use for UI style
+CSSFile = resources/dark_theme/default.css
+
+ResourceDir = resources/dark_theme/
+StatusIconSize = 20
+
+[UI]
+# Note that %n is replaced with a newline per Python strftime documents
+# TODO: Timezone?
+TimeFormat = %H:%M:%S%n%Y-%m-%d
+
+# How often to flash elements on the display such as the TRIG? display,
+# in Hz. Supported range ~1 - 20Hz.  
+FlashFreq = 2.5
+
+# Main logo file location
+Logo = resources/bluepulse.png
