Separate channel tabs into separate gtkbuilder file, add channel tab colouring, internal changes, add ability to enable/disable channels

--- a/main.cfg
+++ b/main.cfg
@@ -5,6 +5,12 @@ CSSFile = resources/dark_theme/default.css
 ResourceDir = resources/dark_theme/
 StatusIconSize = 20
 
+# How dark/light/etc to make end of channel tabs
+ChannelTabShade = 0.4
+ChannelTabEnabledShade = 0.6
+ChannelTabGradePct = 88
+ChannelTabEnabledGradePct = 50
+
 [UI]
 # Note that %n is replaced with a newline per Python strftime documents
 # TODO: Timezone?
