Channel name facility. Size bugs fixed.  Other misc changes...

--- a/main.cfg
+++ b/main.cfg
@@ -10,6 +10,7 @@ ChannelTabShade = 0.4
 ChannelTabEnabledShade = 0.6
 ChannelTabGradePct = 88
 ChannelTabEnabledGradePct = 50
+ChannelBkgndGradePct = 5
 
 [UI]
 # Note that %n is replaced with a newline per Python strftime documents
@@ -22,3 +23,6 @@ FlashFreq = 2.5
 
 # Main logo file location
 Logo = resources/bluepulse.png
+
+# Width of settings notebook on right hand side
+SettingNotebookWidth = 250
