--- a/main.cfg
+++ b/main.cfg
@@ -5,12 +5,18 @@ CSSFile = resources/dark_theme/default.css
 ResourceDir = resources/dark_theme/
 StatusIconSize = 20
 
-# How dark/light/etc to make end of channel tabs
+# Shading of end of channel tabs
 ChannelTabShade = 0.4
 ChannelTabEnabledShade = 0.6
 ChannelTabGradePct = 88
 ChannelTabEnabledGradePct = 50
 ChannelBkgndGradePct = 5
+
+# Shading of channel widgets
+ChannelWidgetEnabledMain = 1.0
+ChannelWidgetEnabledShade = 0.4
+ChannelWidgetDisabledMain = 0.2
+ChannelWidgetDisabledShade = 0.2
 
 [UI]
 # Note that %n is replaced with a newline per Python strftime documents
