--- a/main.cfg
+++ b/main.cfg
@@ -32,3 +32,11 @@ Logo = resources/bluepulse.png
 
 # Width of settings notebook on right hand side
 SettingNotebookWidth = 250
+
+[Render]
+# Number of divisions in the default Y-T Mode
+DisplayHDivisionsYT = 12
+DisplayVDivisionsYT = 8
+
+# Minimum number of samples to render in non-AA mode
+DisplaySamples = 2048
