--- a/main.cfg
+++ b/main.cfg
@@ -1,3 +1,15 @@
+[Debugging]
+# 0  = All debugging logged
+# 20 = Info messages logged, plus all below
+# 30 = Warning messages logged, plus all below
+# 40 = Error messages logged, plus all below
+# 50 = Critical Error messages logged, plus all below
+LogLevel = 0
+
+# Whether to write logfile to memory and the name of the logfile.  If blank no logfile
+# is written. The logfile is overwritten on program start.
+LogFile = ScopeApp.log
+
 [Theme]
 # CSS file to use for UI style
 CSSFile = resources/dark_theme/default.css
