--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pirawcam"]
 	path = ZynqScope/pirawcam
 	url = https://github.com/tom66/pirawcam
+[submodule "armwave"]
+	path = armwave
+	url = https://github.com/tom66/armwave.git
