--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = ZynqScope/pirawcam
 	url = https://github.com/tom66/pirawcam
 [submodule "armwave"]
-	path = armwave
+	path = ZynqScope/armwave
 	url = https://github.com/tom66/armwave.git
