--- a/main.cfg
+++ b/main.cfg
@@ -49,6 +49,11 @@ SettingNotebookWidth = 250
 # Number of divisions in the default Y-T Mode
 DisplayHDivisionsYT = 12
 DisplayVDivisionsYT = 8
+XMargin = 16
+YMargin = 0
+GratFlags = 0x0f
+GratMainColour = 0xff202020
+GratSubColour = 0xff101010
 
 # Minimum number of samples to render in non-AA mode
 DisplaySamples = 2048
