--- a/main.cfg
+++ b/main.cfg
@@ -52,8 +52,9 @@ DisplayVDivisionsYT = 8
 XMargin = 16
 YMargin = 0
 GratFlags = 0x0f
-GratMainColour = 0xff202020
-GratSubColour = 0xff101010
+GratMainColour = 0xffffffff
+GratSubColour = 0xff7f7f7f
+GratBrightness = 0.2
 
 # Minimum number of samples to render in non-AA mode
 DisplaySamples = 2048
