--- a/main.cfg
+++ b/main.cfg
@@ -48,7 +48,9 @@ SettingNotebookWidth = 250
 [Render]
 # Number of divisions in the default Y-T Mode
 DisplayHDivisionsYT = 12
+DisplayHSubDivisionsYT = 5
 DisplayVDivisionsYT = 8
+DisplayVSubDivisionsYT = 5
 XMargin = 16
 YMargin = 0
 GratFlags = 0x0f
