--- a/main.cfg
+++ b/main.cfg
@@ -55,6 +55,7 @@ XMargin = 16
 YMargin = 0
 GratFlags = 0x0f
 GratMainColour = 0xffffffff
+GratDivColour = 0xffcfcfcf
 GratSubColour = 0xff7f7f7f
 GratBrightness = 0.35
 
