--- a/main.cfg
+++ b/main.cfg
@@ -55,8 +55,8 @@ XMargin = 16
 YMargin = 0
 GratFlags = 0x0f
 GratMainColour = 0xffffffff
-GratDivColour = 0xffcfcfcf
-GratSubColour = 0xff7f7f7f
+GratDivColour = 0xff8f8f8f
+GratSubColour = 0xff4f4f4f
 GratBrightness = 0.35
 
 # Minimum number of samples to render in non-AA mode
