--- a/main.cfg
+++ b/main.cfg
@@ -58,6 +58,7 @@ GratMainColour = 0xffffffff
 GratDivColour = 0xff8f8f8f
 GratSubColour = 0xff4f4f4f
 GratBrightness = 0.35
+GratSubTickSize = 4
 
 # Minimum number of samples to render in non-AA mode
 DisplaySamples = 2048
