--- a/main.cfg
+++ b/main.cfg
@@ -53,6 +53,7 @@ DisplayVDivisionsYT = 8
 DisplayVSubDivisionsYT = 5
 XMargin = 16
 YMargin = 0
+YTopOffset = 4  # Generally don't adjust this value
 GratFlags = 0x0f
 GratMainColour = 0xffffffff
 GratDivColour = 0xff8f8f8f
