--- a/main.cfg
+++ b/main.cfg
@@ -53,13 +53,15 @@ DisplayVDivisionsYT = 8
 DisplayVSubDivisionsYT = 5
 XMargin = 16
 YMargin = 0
-YTopOffset = 4  # Generally don't adjust this value
 GratFlags = 0x0f
 GratMainColour = 0xffffffff
 GratDivColour = 0xff8f8f8f
 GratSubColour = 0xff4f4f4f
 GratBrightness = 0.35
 GratSubTickSize = 6
+
+# Generally don't adjust this value
+YTopOffset = 4  
 
 # Minimum number of samples to render in non-AA mode
 DisplaySamples = 2048
