Display tab addition/debugging

--- a/main.cfg
+++ b/main.cfg
@@ -47,6 +47,7 @@ SettingNotebookWidth = 250
 
 [Render]
 # Number of divisions in the default Y-T Mode
+# These settings may be adjusted by changes in the UI and aren't carried in normal configuration files
 DisplayHDivisionsYT = 12
 DisplayHSubDivisionsYT = 5
 DisplayVDivisionsYT = 8
@@ -60,7 +61,10 @@ GratSubColour = 0xff4f4f4f
 GratBrightness = 0.35
 GratSubTickSize = 6
 
-# Generally don't adjust this value
+# CRT mode allows pixels to saturate beyond their intended colour creating a "CRT-Like" glow
+CRTMode = False
+
+# Generally don't adjust this value (it's for UI tweaking only)
 YTopOffset = 5  
 
 # Minimum number of samples to render in non-AA mode
