--- a/main.cfg
+++ b/main.cfg
@@ -58,11 +58,14 @@ GratFlags = 0x0f
 GratMainColour = 0xffffffff
 GratDivColour = 0xff8f8f8f
 GratSubColour = 0xff4f4f4f
-GratBrightness = 0.35
+GratIntensity = 0.35
 GratSubTickSize = 6
 
 # CRT mode allows pixels to saturate beyond their intended colour creating a "CRT-Like" glow
 CRTMode = False
+
+# Wave intensity - 0.0 to 1.0
+WaveIntensity = 0.35
 
 # Generally don't adjust this value (it's for UI tweaking only)
 YTopOffset = 5  
