--- a/main.cfg
+++ b/main.cfg
@@ -30,6 +30,9 @@ ChannelWidgetEnabledShade = 0.4
 ChannelWidgetDisabledMain = 0.2
 ChannelWidgetDisabledShade = 0.2
 
+# Size of icons in trigger selection list
+TriggerIconSize = 30
+
 [UI]
 # Note that %n is replaced with a newline per Python strftime documents
 # TODO: Timezone?
