--- a/main.cfg
+++ b/main.cfg
@@ -33,6 +33,9 @@ ChannelWidgetDisabledShade = 0.2
 # Size of icons in trigger selection list
 TriggerIconSize = 40
 
+# Size of icons in trigger options
+TriggerSubIconSize = 24
+
 [UI]
 # Note that %n is replaced with a newline per Python strftime documents
 # TODO: Timezone?
