--- a/main.cfg
+++ b/main.cfg
@@ -51,6 +51,9 @@ Logo = resources/bluepulse.png
 # Width of settings notebook on right hand side
 SettingNotebookWidth = 250
 
+# Steps to increment voltages in (as divider of full scale). N.B.: zero value will cause bugs
+StepsIncrementVoltages = 80
+
 [Render]
 # Number of divisions in the default Y-T Mode
 # These settings may be adjusted by changes in the UI and aren't carried in normal configuration files
