--- a/main.cfg
+++ b/main.cfg
@@ -51,8 +51,8 @@ Logo = resources/bluepulse.png
 # Width of settings notebook on right hand side
 SettingNotebookWidth = 250
 
-# Steps to increment voltages in (as divider of full scale). N.B.: zero value will cause bugs
-StepsIncrementVoltages = 200
+# Steps to increment voltages in
+StepsIncrementVoltageAmount = 0.1
 
 [Render]
 # Number of divisions in the default Y-T Mode
