--- a/main.cfg
+++ b/main.cfg
@@ -54,6 +54,10 @@ SettingNotebookWidth = 250
 # Steps to increment voltages in
 StepsIncrementVoltageAmount = 0.1
 
+[Trigger]
+# Acceptable trigger hysteresis range
+MaxHysteresis = 2.5
+
 [Render]
 # Number of divisions in the default Y-T Mode
 # These settings may be adjusted by changes in the UI and aren't carried in normal configuration files
